# MFL

./: .gitignore  Cargo.toml  OVERVIEW.md  TODO.md  pass_dep_graph.dot
crates/mfl/: Cargo.toml  build.rs
crates/mfl/src/: backend_llvm.rs  context.rs  diagnostics.rs  error_signal.rs  interners.rs  ir.rs  item_store.rs  lexer.rs  main.rs  n_ops.rs  opcode.rs  option.rs  parser.rs  program.rs  simulate.rs  source_file.rs  stores.rs  timer.rs  type_store.rs
crates/mfl/src/asm/: syscalls.s
crates/mfl/src/backend_llvm/: arithmetic.rs  control.rs  memory.rs  stack.rs
crates/mfl/src/builtins/: bootstrap.s  builtins.mfl  get_errno.c
crates/mfl/src/context/: context.rs  ir.rs  mod.rs
crates/mfl/src/parser/: items.rs  matcher.rs  ops.rs  utils.rs
crates/mfl/src/pass_manager/: mod.rs  static_analysis.rs
crates/mfl/src/pass_manager/passes/: attributes.rs  const_prop.rs  cycles.rs  ident.rs  ident_resolution.rs  mod.rs  stack_type_check.rs  structs.rs  terminal.rs  type_resolution.rs  types.rs  validity.rs
crates/mfl/src/pass_manager/passes/const_prop/: arithmetic.rs  comparative.rs  control.rs  memory.rs  stack_ops.rs
crates/mfl/src/pass_manager/passes/stack_type_check/: stack_check.rs  type_check.rs
crates/mfl/src/pass_manager/passes/stack_type_check/stack_check/: control.rs  memory.rs  stack_ops.rs
crates/mfl/src/pass_manager/passes/stack_type_check/type_check/: arithmetic.rs  comparative.rs  control.rs  memory.rs  stack_ops.rs
crates/mfl/src/pass_manager/passes/validity/: cycles.rs
crates/mfl/src/program/: passes.rs  static_analysis.rs
crates/mfl/src/program/passes/: generic_funcs.rs  idents.rs  types.rs
crates/mfl/src/program/static_analysis/: stack_check.rs
crates/mfl/src/program/static_analysis/const_prop/: arithmetic.rs  comparative.rs  control.rs  memory.rs  stack_ops.rs
crates/mfl/src/program/static_analysis/stack_check/: control.rs  memory.rs  stack_ops.rs
crates/mfl/src/program/static_analysis/type_check2/: arithmetic.rs  comparative.rs  control.rs  memory.rs  stack_ops.rs
crates/mfl/src/stores/: analyzer.rs  block.rs  diagnostics.rs  generics.rs  item.rs  ops.rs  signatures.rs  source.rs  strings.rs  type_store.rs  types.rs  values.rs
crates/tester/: Cargo.toml
crates/tester/src/: main.rs
examples/: ackermann.mfl  alloc_test.mfl  brainfuck.mfl  fib.mfl  generic_function.mfl  generic_struct.mfl  generics_test.mfl  infix_parse.mfl  insert_test.mfl  mmap.mfl  pratt_parser.mfl  rule110.mfl
intcast/: build.rs
src/: backend_custom.rs  backend_llvm.rs  compile.rs  compile_new.rs  diagnostics.rs  interners.rs  lexer.rs  main.rs  n_ops.rs  opcode.rs  option.rs  parser.rs  popn.rs  program.rs  simulate.rs  source_file.rs  type_check.rs  type_store.rs
std/: bootstrap.s  clib.mfl  fs.mfl  io.mfl  lib.mfl  mem.mfl  result.mfl  stdio.mfl  stdmem.mfl  string.mfl  syscalls.s  term.mfl  time.mfl
test_results/: assert_fail.compile.stderr  bare_ident_builtin_struct.compile.stderr  bare_ident_builtin_struct.compile.stdout  bare_ident_primitive.compile.stderr  enum_bad.compile.stderr  enum_good.run.stdout  field_access_bad.compile.stderr  here.run.stdout  logical_and.run.stdout  logical_or.run.stdout  parse_bad_top_level.compile.stderr  recursive_type.compile.stderr  uninitialized_var_read_bad.compile.stderr
tests/: assert_fail.mfl  assert_pass.mfl  bare_ident_builtin_struct.mfl  bare_ident_generic_struct_pack.mfl  bare_ident_primitive.mfl  bare_ident_struct_pack.mfl  const_array_length.mfl  enum_bad.mfl  enum_good.mfl  field_access_bad.mfl  field_access_good.mfl  float_test.mfl  here.mfl  insert_test.mfl  int_base_parse.mfl  logical_and.mfl  logical_or.mfl  parse_bad_top_level.mfl  recursive_type.mfl  (+4 more)
(+148 files in other folders)
