[package]
name = "porth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#debug = true

[dependencies]
ariadne = "0.1.5"
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = "0.6.1"
lasso = "0.6.0"
hashbrown = "0.13.2"
log = "0.4.17"
simplelog = "0.12.0"
variantly = "0.2.0"
