[package]
name = "porth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#debug = true

[dependencies]
ariadne = "0.1.5"
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = "0.6.1"
hashbrown = "0.13.2"
intcast = { path = "../intcast" }
lasso = "0.6.0"
num-traits = "0.2.15"
opentelemetry = "0.18.0"
opentelemetry-jaeger = "0.17.0"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm14-0"]
