[package]
name = "mfl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { path = "../../../ariadne" }
clap = { version = "4.2", features = ["derive"] }
color-eyre = "0.6.1"
hashbrown = "0.13.2"
intcast = { path = "../intcast" }
lasso = "0.7.2"
num-traits = "0.2.15"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
prettytable-rs = { version = "0.10.0", default-features = false }
once_cell = "1.17.1"
logos = "0.13.0"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm16-0"]
