[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
color-eyre = "0.6.2"
diff = "0.1.13"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
tempfile = "3.6.0"
toml = "0.7.4"
walkdir = "2.3.3"
